--- a/src/Page/lesion/supPage/bed/component/bed-item/bed-item.styl
+++ b/src/Page/lesion/supPage/bed/component/bed-item/bed-item.styl
@@ -152,7 +152,7 @@
           line-height 17px
           cursor pointer
           border: 1px solid #666
-
+          white-space: nowrap
 .null-bed
   height 100%
   position relative
