床位一览卡传染病和送产房添加背景颜色

--- a/src/Page/lesion/supPage/bed/component/bed-item/bed-item.html
+++ b/src/Page/lesion/supPage/bed/component/bed-item/bed-item.html
@@ -1,6 +1,7 @@
 <div class="bed-box">
   <div
     class="bed-box-inner"
+    :class="{infectFlag: data.infectFlag == 1,bornFlag: data.bornFlag == 1}"
     :style="[data.bedLabel.includes('_') && data.patientId && (data.newBornOut ? {background: 'rgba(255, 207, 219, .5)'} : {background: '#D9F4FE'}), data.bornStatus === '送产房' && {background: '#FFBCBC'}]"
   >
     <span @click="toInfo(data)" v-if="data.patientId">
