--- a/src/Page/lesion/supPage/bed/component/bed-item/bed-item.styl
+++ b/src/Page/lesion/supPage/bed/component/bed-item/bed-item.styl
@@ -106,6 +106,12 @@
     border:1px solid #CBD5DD;
     height 100%
     box-shadow:0px 2px 4px 0px rgba(0,0,0,0.1);
+    &.infectFlag {
+      background: #E6D8F9;
+    }
+    &.bornFlag {
+      background: #D1EDD6;
+    }
     .part-1
       height 25%
       padding: 0 14px
