--- a/src/Page/sheet-page/components/sheetTable-hemodialysis/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable-hemodialysis/components/excel/style.styl
@@ -20,6 +20,8 @@
       vertical-align: middle;
       line-height: 14px;
       position: relative;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
     }
 
     .th {
