--- a/src/Page/sheet-page/components/sheetTable-hemodialysis/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable-hemodialysis/components/excel/style.styl
@@ -22,6 +22,7 @@
       position: relative;
       -webkit-box-sizing: border-box;
       box-sizing: border-box;
+      overflow: hidden;
     }
 
     .th {
