--- a/src/Page/puerperantSituation/assets/puerperantSituation.scss
+++ b/src/Page/puerperantSituation/assets/puerperantSituation.scss
@@ -42,6 +42,37 @@
             padding: 5px;
             line-height: 16px;
           }
+          textarea.el-textarea__inner {
+            border-color: rgba(0,0,0,0);
+            background: rgba(0,0,0,0);
+            &:hover,&:focus{
+              border-color:#c2cbd2;
+              background: #fff;
+            }
+          }
+          .el-select{
+            .el-input__icon{
+              display: none;
+            }
+            
+            input{
+              padding-right: 10px;
+              border-color: rgba(0,0,0,0);
+              background: rgba(0,0,0,0);
+            }
+            &:hover,&:focus{
+              input{
+                border-color:#c2cbd2;
+                background: #fff;
+              }
+            }
+            &.align-center{
+              input{
+                text-align: center;
+              }
+            }
+          }
+
         }
         th {
           .cell {
