更新 入院表 弹框 图标

--- a/src/assets/css/style.styl
+++ b/src/assets/css/style.styl
@@ -77,6 +77,7 @@ body
   width auto
 .el-tooltip__popper
   z-index 20000 !important
+  border-radius 0px!important
 .el-autocomplete-suggestion li:active
   background: rgb(228, 241, 240)
 .el-loading-spinner
