产科分娩登记表字段添加

--- a/src/Page/puerperantSituation/components/createModal.html
+++ b/src/Page/puerperantSituation/components/createModal.html
@@ -364,6 +364,15 @@
             <el-input size="small" v-model="params.perineumSituation"/>
           </div>
         </el-col>
+        <el-col :span="8">
+          <div class="label">
+            <span class="lc2">完</span>
+            <span>整:</span>
+          </div>
+          <div class="content">
+            <el-input size="small" v-model="params.perineumSituationFull"/>
+          </div>
+        </el-col>
       </el-row>
       <div class="sub-title-row"> </div>
       <el-row class="content-row" :gutter="8">
