--- a/src/pages/sheet-print/style/print.styl
+++ b/src/pages/sheet-print/style/print.styl
@@ -12,7 +12,7 @@
       display none
     }
   .body-con {
-    background #fff !important
+    // background #fff !important
   }
   input, textarea {
     color #000 !important;
