--- a/src/pages/sheet-print/style/print.styl
+++ b/src/pages/sheet-print/style/print.styl
@@ -17,6 +17,9 @@
   input, textarea {
     color #000 !important;
   }
+  .inPreview * {
+    color: blue !important;
+  }
   .canSet{
     color #000
   }
