--- a/src/assets/css/style.styl
+++ b/src/assets/css/style.styl
@@ -1,3 +1,4 @@
+/** 全局的css 必须在这里引入不然打包会忽略 */
 *{
   // font-family: 'SimSun',"Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif !important;
   font-family: simsun, "Times New Roman", Georgia, Serif !important
