--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -107,6 +107,12 @@
       }
     }
 
+    &.clickRow {
+      td {
+        background: #FFF8B1;
+      }
+    }
+
     .mark-cell-status-0 {
       background: rgba(185, 89, 255, 0.6);
     }
