产科分娩登记表 下拉调整

--- a/src/Page/puerperantSituation/components/createModal.html
+++ b/src/Page/puerperantSituation/components/createModal.html
@@ -374,7 +374,7 @@
           </div>
           <div class="content">
             <el-select size="small" v-model="params.perineumSituation">
-              <el-option value=""></el-option><el-option v-for="(item,idx) in perineumSituationOptions" :key="idx" :value="item.code" :label="item.name"></el-option>
+              <el-option value=""></el-option><el-option v-for="(item,idx) in hyqkqkOptions" :key="idx" :value="item.code" :label="item.name"></el-option>
             </el-select>
           </div>
         </el-col>
