--- a/src/Page/puerperantSituation/components/createModal.html
+++ b/src/Page/puerperantSituation/components/createModal.html
@@ -46,7 +46,7 @@
                   :key="idx"
                   v-if="patientOptionVisible(item,filterSearch)"
                   :label="item.name"
-                  :value="item.name+' '+item.patientId">
+                  :value="item.name+'####'+item.patientId">
                   <div>
                     <div style="float: left;">{{item.name}}</div>
                     <div  style="float: right;">{{item.bedLabel}}床</div>
