--- a/src/Page/birth-certificate/components/createModal.html
+++ b/src/Page/birth-certificate/components/createModal.html
@@ -8,8 +8,7 @@
           <el-select v-model="searchingContent" placeholder="产妇姓名/床号/病人ID/住院号" filterable
             :filter-method="patientsFilterMethod" @change="handlePatinentChange">
             <template v-for="(item,idx) in patientListFiltered">
-              <el-option :key="idx" v-if="patientOptionVisible(item,filterSearch)" :label="item.name"
-                :value="item.name+' '+item.patientId">
+              <el-option :key="idx" v-if="patientOptionVisible(item,filterSearch)" :label="item.name" :value="idx">
                 <div>
                   <div style="float: left;">{{item.name}}</div>
                   <div style="float: right;">{{item.bedLabel}}床</div>
