--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -174,6 +174,18 @@
         color: red;
         cursor: pointer;
       }
+      .stat-bottom-line {
+        // position relative
+        &::after {
+          content: '';
+          position: absolute
+          left: 10%;
+          bottom: 2px;
+          width: 80%;
+          height: 2px;
+          background-color: red;
+        }
+      }
     }
 
     &.selectedTr {
