陵城通用记录单右下角加审核签名&自定义标题调整

--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -263,4 +263,37 @@
       top: 45px
     }
   }
+  .sh-name-box {
+    position relative;
+    .sign-null-box {
+      position absolute;
+      width 52px;
+      height 30px;
+      cursor pointer
+      top: 0;
+      right: -48px;
+      bottom: 0;
+      margin: auto;
+    }
+    .sign-in-box {
+      position absolute;
+      width 52px;
+      height 30px;
+      cursor pointer
+      top: 0;
+      right: -48px;
+      bottom: 0;
+      margin: auto;
+      display: flex;
+      align-items: center
+      object-fit: cover;
+      .audit-text {}
+      .audit-img {
+        min-width: 52px;
+        max-width: 52px;
+        display none
+        object-fit: cover;
+      }
+    }
+  }
 }
