陵城记录单出入量统计下划线打印问题修复

--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -182,8 +182,7 @@
           left: 10%;
           bottom: 2px;
           width: 80%;
-          height: 2px;
-          background-color: red;
+          border-bottom:2px solid red;
         }
       }
     }
