陵城记录单修改

--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -182,7 +182,7 @@
           left: 10%;
           bottom: 2px;
           width: 80%;
-          border-bottom:2px solid red;
+          border-bottom: 3px double red;
         }
       }
     }
