陵城重症医学监护记录单字体修改

--- a/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable/components/excel/style.styl
@@ -1,4 +1,9 @@
 .sheet-page-container, .sheet-excel-container, .sheet-page-container-neonatology {
+  .icu_lc {
+    input,textarea {
+      font-size: 14px !important;
+    }
+  }
   .sheet-table {
     border-collapse: collapse;
     margin: 15px 0px;
