上下角标 危重患者护理记录单每行过多留空修复

--- a/src/Page/sheet-page/components/sheetTable-peritoneal_dialysis_hd/components/excel/style.styl
+++ b/src/Page/sheet-page/components/sheetTable-peritoneal_dialysis_hd/components/excel/style.styl
@@ -4,6 +4,12 @@
       font-size: 14px !important;
     }
   }
+  .normal {
+    font-size: 12px !important;
+  }
+  .specialFontSize {
+    font-size: 14px !important;
+  }
   .sheet-table {
     border-collapse: collapse;
     margin: 15px 0px;
